Agentforce/force-app/main/default/objects/Product2/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <label>Service ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>