Agentforce/force-app/main/default/objects/Product2/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft Appearance</fullName>
            </value>
            <value>
                <fullName>External Cleaning</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Carpet Cleaning</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>General Compliance</fullName>
            </value>
            <value>
                <fullName>Waste Consultancy</fullName>
            </value>
            <value>
                <fullName>Contractor Management</fullName>
            </value>
            <value>
                <fullName>Remote Monitoring</fullName>
            </value>
            <value>
                <fullName>Document Management</fullName>
            </value>
            <value>
                <fullName>Envirocomp</fullName>
            </value>
            <value>
                <fullName>Event Cleaning</fullName>
            </value>
            <value>
                <fullName>Window Cleaning</fullName>
            </value>
            <value>
                <fullName>Gmp (Good Manufacturing Practice)</fullName>
            </value>
            <value>
                <fullName>Graffiti &amp; Gum Removal</fullName>
            </value>
            <value>
                <fullName>Grounds Maintenance</fullName>
            </value>
            <value>
                <fullName>Hazardous Waste</fullName>
            </value>
            <value>
                <fullName>CAFM &amp; Helpdesk</fullName>
            </value>
            <value>
                <fullName>Industrial Painting</fullName>
            </value>
            <value>
                <fullName>Information Management</fullName>
            </value>
            <value>
                <fullName>Interior Windows</fullName>
            </value>
            <value>
                <fullName>Internal Plants</fullName>
            </value>
            <value>
                <fullName>Kerb Side</fullName>
            </value>
            <value>
                <fullName>Labour Supply</fullName>
            </value>
            <value>
                <fullName>Asset Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Guards Static</fullName>
            </value>
            <value>
                <fullName>Marble &amp; Granite Restoration</fullName>
            </value>
            <value>
                <fullName>Mobilisation &amp; Transition Planning</fullName>
            </value>
            <value>
                <fullName>Guards Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>