Agentforce/force-app/main/default/objects/Product2/listViews/Automotive.listView-meta.xml
<ListView>
    <fullName>Automotive</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Automotive Aftersales,Automotive Warranty &amp; Dealer Support,Automotive Business Services,Automotive Development &amp; Launch,Automotive Fleet &amp; Remarketing,Automotive Hail Repair Solutions</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Automotive HV Management,Automotive Automation &amp; Data Exchange,Automotive Logistics &amp; Handling,Automotive Paintshop Services,Automotive Production Support,Automotive QPDI services</value>
    </filters>
    <label>Automotive</label>
</ListView>